# examples-py

./: .coveragerc  .editorconfig  .flake8  .gitignore  .mypy.ini  .ruff.toml  LICENSE  Pipfile  README.md  cspell.json  pyproject.toml  pytest.ini
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yaml  codeql.yml
apps/examples-cli/: README.md  pyproject.toml
apps/examples-cli/src/examples_cli/: __init__.py  __main__.py  arguments.py
apps/examples-cli/src/examples_cli/libraries/logging/: __init__.py  configuration.py  example.py  filter.py  logging_config.yaml
apps/examples-cli/src/examples_cli/libraries/pillow/exif/: __init__.py  example.py
apps/examples-ipc/: .cspell.json  README.md  pyproject.toml
apps/examples-ipc/src/examples_ipc/: arguments.py
apps/examples-ipc/src/examples_ipc/posix/: __init__.py
apps/examples-ipc/src/examples_ipc/posix/message_queue/: server.py
apps/examples-ipc/src/examples_ipc/posix/mqueue/: __init__.py  client.py  server.py
apps/examples-ipc/src/examples_ipc/posix/semaphore/: __init__.py  client.py  server.py
apps/examples-ipc/src/examples_ipc/posix/shared_memory/: client.py  server.py
apps/examples-ipc/src/examples_ipc/posix/shm/: __init__.py  client.py
apps/examples-ipc/src/examples_ipc/sysv/message_queue/: server.py
apps/examples-ipc/src/examples_ipc/sysv/semaphore/: client.py  server.py
apps/examples-ipc/src/examples_ipc/sysv/shared_memory/: __init__.py  client.py  server.py
docs/: .cspell.json  README.md  cspell.json
docs/environment/: pip.md  pyenv-virtualenv.md  pyenv.md  venv.md
docs/environments/: README.md
docs/managements/: pdm.md  pip.md  pipenv.md  poetry.md  pyenv.md  pyenv‐virtualenv.md  rye.md  setuptools.md  uv.md  venv.md
docs/packaging/: pdm.md  pip.md  pipenv.md  poetry.md  setuptools.md
docs/pep/: PEP440.md  pop440.md
docs/testing/: unittests.md
docs/tools/: mypy.md
libs/examples-lib/: .cspell.json  README.md  pyproject.toml
libs/examples-lib/tests/libraries/datetime/: test_aware_datetime_with_pytz.py  test_aware_datetime_with_zoneinfo.py  test_datetime_aware_with_pytz.py  test_native_datetime.py
libs/examples-lib/tests/libraries/numpy/: test_broadcasting.py  test_generators.py  test_indexing.py  test_matrix.py  test_ndarray.py  test_numpy_broadcasting.py
libs/examples-lib/tests/libraries/numpy/fundamentals/: test_numpy_basics_broadcasting.py  test_numpy_basics_indexing.py
libs/examples-lib/tests/references/data_models/: test_Iterator_class.py  test_context_manager_class.py  test_generic_class.py  test_immutable_class.py
libs/examples-lib/tests/references/decorators/: test_class_decorator.py  test_decorator.py
libs/examples-lib/tests/references/functionals/: test_built_in_functions.py  test_functools.py  test_generator.py  test_genexp_and_listcomp.py  test_iterator.py
libs/examples-lib/tests/references/sequences/: test_common_sequence_operations.py  test_list_comprehensions.py
libs/examples-lib/tests/references/sorting/: test_sorting.py  test_sorting_with_natsort.py
scripts/: move-photo-files.py
scripts/move-photo-files/: move-photo-files.py  move-photo-files.sh
src/example-py/: pyproject.toml
src/examples-packaging-pdm/: README.md  pyproject.toml
src/examples-packaging-pipenv/: README.md
src/examples-packaging-poetry/: README.md  pyproject.toml
src/examples-packaging-setup/: README.md  pyproject.toml  setup.cfg
src/examples-py/: README.md  pyproject.toml
src/examples-py/examples/config/: logging.py
src/examples-py/examples/console/: _logging.py  command.py  logging.py
src/examples-py/examples/resources/: logging_config.json  logging_config.yaml
src/examples-py/src/examples/config/: logging.py
src/examples-py/src/examples/console/: _argparse.py  _exif.py  _logging.py  arguments.py  command.py
src/examples-py/src/examples/libraries/argparse/: __init__.py  _example.py  example.py  game.py
src/examples-py/src/examples/libraries/logging/: __init__.py  _config.py  _example.py  _filter.py  config.py  example.py  filter.py
src/examples-py/src/examples/libraries/pillow/: __init__.py  _exif.py  exif.py
src/examples-py/src/examples/resources/: logging_config.yaml
src/examples-py/src/examples/resources/logging/: logging_config.yaml
src/examples-py/src/examples/standards/argparse/: __init__.py  _example.py
src/examples-py/src/examples/standards/logging/: __init__.py  _config.py  _example.py
src/examples-py/tests/collections/: test_comprehensions.py  test_functionals.py  test_generations.py  test_slicing.py  test_sorting.py
src/examples-py/tests/decorators/: test_class_decorator.py  test_decorator.py
src/examples-py/tests/libraries/datetime/: test_aware_datetime_with_pytz.py  test_aware_datetime_with_zoneinfo.py  test_native_datetime.py
src/examples-py/tests/localization/: test_aware_datetime_pytz.py  test_aware_datetime_zoneinfo.py  test_native_datetime.py
src/examples-py/tests/references/data_models/: test_Iterator_class.py  test_context_manager_class.py  test_generic_class.py  test_immutable_class.py
src/examples-py/tests/references/decorators/: test_class_decorator.py  test_decorator.py
src/examples-py/tests/references/functionals/: __init__.py  test_built_in_functions.py  test_functools.py  test_generator.py  test_genexp_and_listcomp.py  test_iterator.py
src/examples-py/tests/references/sequences/: test_common_sequence_operations.py  test_list_comprehensions.py
src/examples-py/tests/references/sorting/: __init__.py  test_sorting.py  test_sorting_with_natsort.py
src/examples-py/tests/standards/datetimes/: test_aware_datetime_with_zoneinfo.py
src/examples-py/tests/structures/: test_Iterator.py  test_context_manager.py  test_generics.py  test_immutable.py
src/packaging/helloworld/: setup.py
src/packaging/helloworld_cfg/: setup.cfg
src/packaging/helloworld_pep518/: setup.cfg
src/packaging/helloworld_pep518/helloworld_pep518/: main.py
src/web/examples-flask-media/: README.md  pyproject.toml
tools/: mypy-all-packages.sh
(+18 files in other folders)
