[project]
authors = [
  { name = "A.suzuki", email = "suzu.devworks@gmail.com" },
]
dependencies = []
description = "Add your description here"
name = "examples-py"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "pyclean>=3.0.0",
  "ruff>=0.8.2",
]

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["packages/*"]
