[project]
authors = [
  { name = "A.suzuki", email = "suzu.devworks@gmail.com" },
]
dependencies = [
  "natsort>=8.4.0",
  "numpy>=2.1.2",
  "pytz>=2024.2",
]
description = "Add your description here"
name = "examples-lib"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
dev-dependencies = [
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "types-pytz>=2024.2.0.20240913",
]
managed = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/examples_lib"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
  "asyncio",
]

[tool.rye.scripts]
test = "pytest --durations=0 --cov-branch --cov-report xml:.cov/coverage.xml --cov=src tests/"
