
[project]
name = "examples-packaging-pdm"
version = "0.1.0"
description = ""
authors = [
    {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
