[tool.poetry]
authors = ["A.suzuki <suzu.devworks@gmail.com>"]
description = ""
name = "examples-packaging-poetry"
packages = [{include = "examples_packaging_poetry"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pyclean = "^2.7.2"
pytest-cov = "^4.0.0"
taskipy = "^1.10.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
