[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [
  {name = "A.suzuki", email = "suzu.devworks@gmail.com"},
]
dependencies = [
  "pyyaml>=6.0.1",
  "pillow>=10.4.0",
]
description = "Default template for PDM package"
dynamic = ["version"]
license = {text = "MIT"}
name = "examples-py"
readme = "README.md"
requires-python = ">=3.12"

[project.scripts]
examples-cli = "examples.console.command:main"

[tool.pdm]
distribution = true
version = {source = "file", path = "src/examples/__version__.py"}

[tool.pdm.dev-dependencies]
dev = [
  "flake8>=7.0.0",
  "mypy>=1.10.0",
  "black>=24.4.2",
  "isort>=5.13.2",
  "pytest-cov>=5.0.0",
  "pyclean>=3.0.0",
  "types-pytz>=2024.1.0.20240417",
  "types-PyYAML>=6.0.12.20240311",
  "types-Pillow>=10.2.0.20240520",
  "pytest-asyncio>=0.23.6",
]
test = [
  "pytz>=2024.1",
  "natsort>=8.4.0",
]

[tool.pdm.scripts]
clean = {composite = ["pyclean ."]}
format = {composite = ["isort src/ tests/", "black src/ tests/"]}
lint = {composite = ["flake8", "mypy src/ tests/"]}
test = "pytest --durations=0 --cov-branch --cov-report xml:.cov/coverage.xml --cov=src tests/"

[tool.black]
line-length = 119

[tool.isort]
line_length = 119
profile = "black"

[tool.flake8]
ignore = "E203,E266,W503"
max-line-length = 119

[tool.mypy]
files = ["src/", "tests/"]
pretty = true
python_version = 3.12
show_error_context = true
strict = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = ["natsort"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
markers = [
  "asyncio",
]
