[metadata]
name = helloworld-pep518
version = 0.0.1.dev0
description = Hello World command line.
log_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
license = MIT
author = A.suzuki
classifiers = 
    Programming Language :: Python :: 3.9

[option]
packages = find:
install_requires =
    reqests
    importlib; python_version == "3.9"

[options.entry_points]
console_scripts =
    helloworld-pep518-cli = helloworld_pep518.main:main
